concert-template/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: skills-concert
  name: book-deploy
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: book-app
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: book-app
    spec:
      containers:
        - image: 901465080240.dkr.ecr.us-east-1.amazonaws.com/concert/book:latest
          imagePullPolicy: Always
          name: book-app
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "0.5"
      nodeSelector:
        eks.amazonaws.com/nodegroup: "services"

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: skills-concert
  name: query-deploy
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: query-app
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: query-app
    spec:
      containers:
        - image: 901465080240.dkr.ecr.us-east-1.amazonaws.com/concert/query:latest
          imagePullPolicy: Always
          name: query-app
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "0.5"
      nodeSelector:
        eks.amazonaws.com/nodegroup: "services"
